--- a/install.text
+++ b/install.text
@@ -1,5 +1,8 @@
 جهت نصب افزونه را دانلود کنید
 در سایت خود بارگذاری و نصب کنید 
 از قسمت محصولات یک محصول اضافه کنید و ایدی تپسی شاپ خود را به ان بدهید 
+از قسمت هماهنگ سازی تپسی میتوانید دستی قیمت ها را اپدیت کنید 
+یا هر 5 دقیقه یکبار بصورت اتوماتیک قیمت ها تغییر میکند.
+
 در صورت وجود مشکل به این سایت مراجعه کنید
 https://seokeywords.ir/
